@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Oct 7, 2020 6:37:08pm"
-#define GIT_COMMIT_HASH "e4ae15d"
+#define UPDATED_STR "Oct 9, 2020 1:01:34am"
+#define GIT_COMMIT_HASH "122d953"
 #define COPYRIGHT_END_YEAR "2020"
